Sat Feb 02 13:14:29 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py: Backwards
	  compatibility fix for reading the metadata: if the config isn't
	  in the metadata key, or metadata isn't supported by the version
	  of xapian in use, read it from the file.  When writing the
	  config, if it can't be stored in the metadata, store it in a
	  file.  A database can now be upgraded to use the new metadata
	  method simply by opening an indexerconnection on it, and then
	  closing it.

Sat Feb 02 12:47:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Tidy up tarball making script.

Sat Feb 02 12:44:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add faster implementation of expand
	  decider, using a regexp for the prefixes.
	* xappy/searchconnection_doctest2.txt: Test it.

Mon Jan 28 15:13:04 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py: Change the
	  storage of the settings from a file in the database directory to
	  be in a metadata.  This change allow the forthcoming replication
	  support to copy databases without losing their settings, and
	  should also be helpful when we implement remote database support.

Wed Jan 23 22:27:50 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Even newer xapian tarball - containing more
	  fixes from charlie for windows.

Wed Jan 23 16:04:12 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Update xapian
	  tarballs - mainly to get fixes for the build system on windows.

Thu Jan 10 00:28:26 UTC 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update to get latest archives.

Thu Jan 10 00:04:51 UTC 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update with new branchpoint.
